--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="piedra-papel-tijera.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 
@@ -36,6 +36,6 @@
   <button class="botonreseteo" onclick="reseteo();" > Resetear </button>
   
   
-  <script src="piedra-papel-tijera.js"> </script>
+  <script src="script.js"> </script>
 </body>
 </html>
