--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 
   <button class="botondeljuego" onclick="Juego('Piedra')">
-    <img src="imagenes/piedra.png"  class="icono">
+    <img src="imagenes/Piedra.png"  class="icono">
   </button>
 
   <button class="botondeljuego"  onclick="Juego('Papel')">
-    <img src="imagenes/papel.png"   class="icono">
+    <img src="imagenes/Papel.png"   class="icono">
   </button>
 
   <button class="botondeljuego"  onclick="Juego('Tijera')">
-    <img src="imagenes/tijera.png"   class="icono">
+    <img src="imagenes/Tijera.png"   class="icono">
   </button>
 
   
