--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="imagenes/logo.png" type="image/png">
+  <link rel="icon" href="imagenes/logo.jpg" type="image/jpg">
 </head>
 
 
